@@ -12,6 +12,8 @@ What's New in Python 3.0.1?
 Core and Builtins
 -----------------
 
+- Issue #4991: os.fdopen now raises an OSError for invalid file descriptors.
+
 - Issue #4838: When a module is deallocated, free the memory backing the
   optional module state data.
 
